<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:translationZ="2dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_view_from_place"
            style="@style/TextViewOnSearchItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:text="@string/search_item_from_place"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/autocomplete_text_from_place"
            style="@style/EditTextOnSearchItem"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:maxLength="64"
            android:maxLines="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_from_place"
            tools:text="@tools:sample/cities" />

        <ImageButton
            android:id="@+id/image_button_swap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/colorTransparent"
            android:contentDescription="@string/image_button_change_destination"
            android:text=""
            app:layout_constraintBottom_toBottomOf="@+id/text_view_to_place"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@+id/text_view_to_place"
            app:srcCompat="@drawable/ic_change_arrows_24dp" />

        <TextView
            android:id="@+id/text_view_to_place"
            style="@style/TextViewOnSearchItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/search_item_to_place"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/autocomplete_text_from_place" />

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/autocomplete_text_to_place"
            style="@style/EditTextOnSearchItem"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:maxLength="64"
            android:maxLines="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_to_place"
            tools:text="@tools:sample/cities" />

        <TextView
            android:id="@+id/text_view_data_travel"
            style="@style/TextViewOnSearchItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/search_item_travel_data"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/autocomplete_text_to_place" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_data_travel"
            style="@style/EditTextOnSearchItem"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:focusable="false"
            android:maxLength="32"
            android:maxLines="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_data_travel"
            tools:text="@tools:sample/date/ddmmyy" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_pick_up"
            style="@style/ExtendedFab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/button_text_pick_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_data_travel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>